--- a/CSharpHelperLib/CSharpHelperLib.csproj
+++ b/CSharpHelperLib/CSharpHelperLib.csproj
@@ -30,37 +30,47 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSharpHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharpHelper.1.1.0\lib\CSharpHelper.dll</HintPath>
+    <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharpHelper.1.1.0\lib\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharpHelper.1.1.0\lib\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.2-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http">
-      <HintPath>..\packages\CSharpHelper.1.1.0\lib\System.Net.Http.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Net.Http.WebRequest">
-      <HintPath>..\packages\CSharpHelper.1.1.0\lib\System.Net.Http.WebRequest.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateTimeHelper.cs" />
+    <Compile Include="Config\ConfigHelper.cs" />
+    <Compile Include="ConvertExt\ConvertHelper.cs" />
+    <Compile Include="Http\CacheHelper.cs" />
+    <Compile Include="Http\DataCache.cs" />
+    <Compile Include="Http\HttpCookieHelper.cs" />
+    <Compile Include="SessionHelper.cs" />
+    <Compile Include="SerializeHelper.cs" />
+    <Compile Include="MemoryCacheHelper.cs" />
+    <Compile Include="LogHelper.cs" />
+    <Compile Include="ListHelper.cs" />
+    <Compile Include="KeyHelper.cs" />
+    <Compile Include="DataSetHelper.cs" />
+    <Compile Include="HttpClientHelper.cs" />
+    <Compile Include="Http\HttpHelper.cs" />
+    <Compile Include="Date\DateTimeHelper.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="LogTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="JsonHelper.cs" />
     <Compile Include="WgetHelper.cs" />
   </ItemGroup>
   <ItemGroup>
