--- a/CSharpHelperLib/CSharpHelperLib.csproj
+++ b/CSharpHelperLib/CSharpHelperLib.csproj
@@ -54,15 +54,22 @@
   <ItemGroup>
     <Compile Include="Config\ConfigHelper.cs" />
     <Compile Include="ConvertExt\ConvertHelper.cs" />
-    <Compile Include="Http\CacheHelper.cs" />
-    <Compile Include="Http\DataCache.cs" />
+    <Compile Include="Csv\CsvHelper.cs" />
+    <Compile Include="EncryptAndDecode\CryptographyType.cs" />
+    <Compile Include="EncryptAndDecode\Decode.cs" />
+    <Compile Include="EncryptAndDecode\Encrypt.cs" />
+    <Compile Include="Ext\ByteArrayExt.cs" />
+    <Compile Include="Ext\StringExt.cs" />
+    <Compile Include="Http\HttpCacheHelper.cs" />
+    <Compile Include="Http\HttpSessionHelper.cs" />
+    <Compile Include="Http\HttpDataCache.cs" />
     <Compile Include="Http\HttpCookieHelper.cs" />
     <Compile Include="SessionHelper.cs" />
     <Compile Include="SerializeHelper.cs" />
     <Compile Include="MemoryCacheHelper.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="ListHelper.cs" />
-    <Compile Include="KeyHelper.cs" />
+    <Compile Include="EncryptAndDecode\KeyHelper.cs" />
     <Compile Include="DataSetHelper.cs" />
     <Compile Include="HttpClientHelper.cs" />
     <Compile Include="Http\HttpHelper.cs" />
@@ -70,7 +77,7 @@
     <Compile Include="FileHelper.cs" />
     <Compile Include="LogTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="JsonHelper.cs" />
+    <Compile Include="Json\JsonHelper.cs" />
     <Compile Include="WgetHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -79,5 +86,6 @@
   <ItemGroup>
     <Content Include="nuget.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
