--- a/CSharpHelperLib/CSharpHelperLib.csproj
+++ b/CSharpHelperLib/CSharpHelperLib.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -42,6 +45,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Runtime.Caching" />
@@ -55,22 +59,33 @@
     <Compile Include="Config\ConfigHelper.cs" />
     <Compile Include="ConvertExt\ConvertHelper.cs" />
     <Compile Include="Csv\CsvHelper.cs" />
+    <Compile Include="Mail\MailHelper.cs" />
+    <Compile Include="EncodingExt\EncodingHelper.cs" />
     <Compile Include="EncryptAndDecode\CryptographyType.cs" />
     <Compile Include="EncryptAndDecode\Decode.cs" />
     <Compile Include="EncryptAndDecode\Encrypt.cs" />
     <Compile Include="Ext\ByteArrayExt.cs" />
     <Compile Include="Ext\StringExt.cs" />
+    <Compile Include="FileAndDir\FileSizeUnitType.cs" />
+    <Compile Include="FileAndDir\DirFileHelper.cs" />
+    <Compile Include="Ftp\FtpHelper.cs" />
     <Compile Include="Http\HttpCacheHelper.cs" />
     <Compile Include="Http\HttpSessionHelper.cs" />
     <Compile Include="Http\HttpDataCache.cs" />
     <Compile Include="Http\HttpCookieHelper.cs" />
+    <Compile Include="Image\Class1.cs" />
+    <Compile Include="PinYin\PinYin.cs" />
+    <Compile Include="PinYin\PinYinHelper.cs" />
+    <Compile Include="ProcessResultInfo\ProcessResultInfo.cs" />
+    <Compile Include="Random\RandomHelper.cs" />
+    <Compile Include="Rmb\RmbHelper.cs" />
     <Compile Include="SessionHelper.cs" />
-    <Compile Include="SerializeHelper.cs" />
+    <Compile Include="Serialize\SerializeHelper.cs" />
     <Compile Include="MemoryCacheHelper.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="ListHelper.cs" />
     <Compile Include="EncryptAndDecode\KeyHelper.cs" />
-    <Compile Include="DataSetHelper.cs" />
+    <Compile Include="ConvertExt\DataSetHelper.cs" />
     <Compile Include="HttpClientHelper.cs" />
     <Compile Include="Http\HttpHelper.cs" />
     <Compile Include="Date\DateTimeHelper.cs" />
@@ -78,7 +93,12 @@
     <Compile Include="LogTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Json\JsonHelper.cs" />
+    <Compile Include="Sound\Class1.cs" />
+    <Compile Include="TarAndZip\WinRarHelper.cs" />
+    <Compile Include="TarAndZip\Compresses.cs" />
+    <Compile Include="TarAndZip\TarHelper.cs" />
     <Compile Include="WgetHelper.cs" />
+    <Compile Include="Xml\Class1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -86,6 +106,9 @@
   <ItemGroup>
     <Content Include="nuget.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Dbf\" />
+    <Folder Include="Excel\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
