--- a/CSharpHelperLib/packages.config
+++ b/CSharpHelperLib/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.2-beta1" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
 </packages>
